Changed least_reached to unreached.
